Most of the front-end of the FitnessTrackr app completed

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,25 @@
     transform: rotate(360deg);
   }
 }
+
+.header-button {
+  margin-left: 10px;
+}
+
+@media only screen and (max-width: 992px) {
+  .header-button {
+    margin-top: 10px;
+  }
+}
+
+.navigation h4 {
+  color: #ffffff;
+}
+
+.routine-cards {
+  margin: 20px 0;
+}
+
+.activity-list {
+  margin: 20px 0;
+}
